switched verticalAlign to use transforms mixin, put correct rotation properties on ed-song-card view
changed ed-icon to have verticalAlign on all the rotation classes instead of svg directly

--- a/client/styles/ed/alignments.mixin.less
+++ b/client/styles/ed/alignments.mixin.less
@@ -1,13 +1,12 @@
+@import "../mixins/prefixes/transforms.less";
+
+// use this on the parent element for verticalAlign IF the parent element is an odd number of pixels
 .parentElementVertAlign() {
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+  .transformStyle( preserve-3d );
 }
 
 .verticalAlign() {
   position: relative;
   top: 50%;
-  -webkit-transform+_: translateY(-50%);
-  -ms-transform+_: translateY(-50%);
-  transform+_: translateY(-50%);
+  .transform( translateY(-50%) );
 }
