--- a/client/views/player/ed-song-card-view/ed-song-card-view.less
+++ b/client/views/player/ed-song-card-view/ed-song-card-view.less
@@ -110,7 +110,7 @@
     height: 64%;
     width: 64%;
     position: inherit;
-    margin: 1rem -1.75rem 0 0;
+    margin: 2.7rem -2rem 0 0;
   }
 }
 
